# rock-image-annotation

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
notebooks/: NN Berea 500.ipynb
src/: main.cpp
src/entities/: PixelData.cpp  PixelData.h
src/widgets/: ImageDisplaySubWindow.cpp  ImageDisplaySubWindow.h  ImageDisplayWidget.cpp  ImageDisplayWidget.h  PixelDataTable.cpp  PixelDataTable.h  StackedImagesWidget.cpp  StackedImagesWidget.h
src/windows/Dialogs/: ColorDialog.cpp  ColorDialog.h  CustomMessageDialogs.h
src/windows/RockImageWindow/: rockimageui.cpp  rockimageui.h  rockimageui.ui
tools/: buildrun  convimg  convimg.sh  rundocker
